Refactor FindCommandTest.java